name:                monad-transformers
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.8 && <5.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       wreq
                     , bytestring
                     , transformers
                     , hspec
                     , QuickCheck
                     , checkers
                     , random
                     , dlist
                     , trifecta
                     , parsers
                     , raw-strings-qq
                     , containers
                     , text
                     , attoparsec
                     , parsec
                     , aeson
                     , scientific
                     , time
                     , either
                     , scotty
