name:                basic-libraries
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10


executable bl-benchmark
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5.0
  hs-source-dirs:      app/bench
  default-language:    Haskell2010
  build-depends:       basic-libraries
                     , transformers
                     , criterion


executable bl-profiling
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5.0
  hs-source-dirs:      app/profiling
  default-language:    Haskell2010
  build-depends:       basic-libraries


executable bl-profiling-heap
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5.0
  hs-source-dirs:      app/profiling-heap
  default-language:    Haskell2010
  build-depends:       basic-libraries


executable bl-caf
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5.0
  hs-source-dirs:      app/caf
  default-language:    Haskell2010
  build-depends:       basic-libraries


executable bl-map
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5.0
  hs-source-dirs:      app/map
  default-language:    Haskell2010
  build-depends:       basic-libraries
                     , containers
                     , criterion

executable bl-set
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5.0
  hs-source-dirs:      app/set
  default-language:    Haskell2010
  build-depends:       basic-libraries
                     , containers
                     , criterion


library
  build-depends:       base >=4.8 && <5.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       transformers
                     , criterion
