name:                shady
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable shad
  ghc-options:         -Wall
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , shady

library
  build-depends:       base >=4.8 && <5.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Shady.Db
  other-modules:       Shady.Db.Queries
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text