name: shawty
version: 0.0.0.1
build-type: Simple
cabal-version: >= 1.10

executable shawty
  hs-source-dirs: .
  main-is: Main.hs
  ghc-options: -threaded
  build-depends: base
               , bytestring
               , hedis
               , mtl
               , network-uri
               , random
               , scotty
               , semigroups
               , text
               , transformers
  default-language: Haskell2010